[gd_scene load_steps=6 format=3 uid="uid://dd8pu5noe3xah"]

[ext_resource type="Script" path="res://Manager/Main.gd" id="1_syayy"]
[ext_resource type="PackedScene" uid="uid://hs01ko2tyqbo" path="res://UI/MenuPause.tscn" id="2_0srp7"]
[ext_resource type="Script" path="res://Manager/DialogueManager.gd" id="2_vpco7"]
[ext_resource type="FontFile" uid="uid://bj72y5kqelghp" path="res://Ressources/Fonts/primer.print-bold.otf" id="4_povvg"]

[sub_resource type="GDScript" id="GDScript_wlx2n"]
script/source = "extends Node2D
"

[node name="Main" type="Node2D"]
script = ExtResource("1_syayy")

[node name="Transition" type="CanvasLayer" parent="."]
layer = 4

[node name="ColorRect" type="ColorRect" parent="Transition"]
z_index = 3
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 0)

[node name="Game" type="Node" parent="."]

[node name="SceneHolder" type="Node2D" parent="Game"]
unique_name_in_owner = true
script = SubResource("GDScript_wlx2n")

[node name="GUI" type="Control" parent="Game"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="DialogueManager" type="Node" parent="Game"]
script = ExtResource("2_vpco7")

[node name="MusicPlayer" type="AudioStreamPlayer" parent="Game"]
bus = &"Musiques"

[node name="PauseCanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="MenuPause" parent="PauseCanvasLayer" instance=ExtResource("2_0srp7")]
z_index = 100

[node name="Sauvegarde" type="CanvasLayer" parent="."]
layer = 3

[node name="Label" type="Label" parent="Sauvegarde"]
visible = false
offset_left = 40.0
offset_top = 40.0
offset_right = 707.0
offset_bottom = 147.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 7
theme_override_fonts/font = ExtResource("4_povvg")
theme_override_font_sizes/font_size = 70
text = "Sauvegarde effectu√©e"
